--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		</div>
 	</div>
 
+	<p>
+	<a href="https://github.com/hmoffatt/chrome-scriptprocessor-glitch">Source on github</a>
+
 	<script src="app.js"></script>
 
 </body>
